Kerbalua/Kerbalua/Completion/Grammar/IncompleteLuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from IncompleteLua.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class IncompleteLuaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, NAME=56, NORMALSTRING=57, CHARSTRING=58, 
		LONGSTRING=59, INT=60, HEX=61, FLOAT=62, HEX_FLOAT=63, COMMENT=64, LINE_COMMENT=65, 
		WS=66, SHEBANG=67;
	public const int
		RULE_chunk = 0, RULE_implicitReturn = 1, RULE_incompleteChunk = 2, RULE_block = 3, 
		RULE_incompleteBlock = 4, RULE_stat = 5, RULE_incompleteStat = 6, RULE_incompleteElse = 7, 
		RULE_retstat = 8, RULE_incompleteRetstat = 9, RULE_label = 10, RULE_funcname = 11, 
		RULE_incompleteFuncname = 12, RULE_varlist = 13, RULE_incompleteVarlist = 14, 
		RULE_namelist = 15, RULE_incompleteNamelist = 16, RULE_explist = 17, RULE_incompleteExplist = 18, 
		RULE_exp = 19, RULE_incompleteExp = 20, RULE_prefixexp = 21, RULE_incompletePrefixexp = 22, 
		RULE_functioncall = 23, RULE_incompleteFunctionCall = 24, RULE_varOrExp = 25, 
		RULE_incompleteVarOrExp = 26, RULE_varName = 27, RULE_var = 28, RULE_incompleteVar = 29, 
		RULE_varSuffix = 30, RULE_incompleteVarSuffix = 31, RULE_nameAndArgs = 32, 
		RULE_incompleteNameAndArgs = 33, RULE_args = 34, RULE_incompleteArgs = 35, 
		RULE_functiondef = 36, RULE_incompleteFunctiondef = 37, RULE_funcbody = 38, 
		RULE_incompleteFuncbody = 39, RULE_parlist = 40, RULE_incompleteParlist = 41, 
		RULE_tableconstructor = 42, RULE_incompleteTableconstructor = 43, RULE_fieldlist = 44, 
		RULE_incompleteFieldlist = 45, RULE_field = 46, RULE_incompleteField = 47, 
		RULE_fieldsep = 48, RULE_operatorOr = 49, RULE_operatorAnd = 50, RULE_operatorComparison = 51, 
		RULE_operatorStrcat = 52, RULE_operatorAddSub = 53, RULE_operatorMulDivMod = 54, 
		RULE_operatorBitwise = 55, RULE_operatorUnary = 56, RULE_operatorPower = 57, 
		RULE_number = 58, RULE_string = 59, RULE_incompleteString = 60, RULE_incompleteName = 61, 
		RULE_keyword = 62;
	public static readonly string[] ruleNames = {
		"chunk", "implicitReturn", "incompleteChunk", "block", "incompleteBlock", 
		"stat", "incompleteStat", "incompleteElse", "retstat", "incompleteRetstat", 
		"label", "funcname", "incompleteFuncname", "varlist", "incompleteVarlist", 
		"namelist", "incompleteNamelist", "explist", "incompleteExplist", "exp", 
		"incompleteExp", "prefixexp", "incompletePrefixexp", "functioncall", "incompleteFunctionCall", 
		"varOrExp", "incompleteVarOrExp", "varName", "var", "incompleteVar", "varSuffix", 
		"incompleteVarSuffix", "nameAndArgs", "incompleteNameAndArgs", "args", 
		"incompleteArgs", "functiondef", "incompleteFunctiondef", "funcbody", 
		"incompleteFuncbody", "parlist", "incompleteParlist", "tableconstructor", 
		"incompleteTableconstructor", "fieldlist", "incompleteFieldlist", "field", 
		"incompleteField", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
		"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise", 
		"operatorUnary", "operatorPower", "number", "string", "incompleteString", 
		"incompleteName", "keyword"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", "'repeat'", 
		"'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", "','", "'in'", 
		"'function'", "'local'", "'return'", "'::'", "'.'", "':'", "'nil'", "'false'", 
		"'true'", "'...'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'", 
		"'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'..'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'//'", "'&'", "'|'", "'~'", "'<<'", "'>>'", "'not'", "'#'", 
		"'^'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "NAME", "NORMALSTRING", 
		"CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", 
		"LINE_COMMENT", "WS", "SHEBANG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "IncompleteLua.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static IncompleteLuaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IncompleteLuaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IncompleteLuaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ChunkContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(IncompleteLuaParser.Eof, 0); }
		public ImplicitReturnContext implicitReturn() {
			return GetRuleContext<ImplicitReturnContext>(0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.EnterChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.ExitChunk(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIncompleteLuaVisitor<TResult> typedVisitor = visitor as IIncompleteLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(Context, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			State = 132;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 126; block();
				State = 127; Match(Eof);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 129; implicitReturn();
				State = 130; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImplicitReturnContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(IncompleteLuaParser.Eof, 0); }
		public ImplicitReturnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_implicitReturn; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.EnterImplicitReturn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.ExitImplicitReturn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIncompleteLuaVisitor<TResult> typedVisitor = visitor as IIncompleteLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImplicitReturn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImplicitReturnContext implicitReturn() {
		ImplicitReturnContext _localctx = new ImplicitReturnContext(Context, State);
		EnterRule(_localctx, 2, RULE_implicitReturn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; exp(0);
			State = 135; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncompleteChunkContext : ParserRuleContext {
		public IncompleteBlockContext incompleteBlock() {
			return GetRuleContext<IncompleteBlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(IncompleteLuaParser.Eof, 0); }
		public IncompleteChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_incompleteChunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.EnterIncompleteChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.ExitIncompleteChunk(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIncompleteLuaVisitor<TResult> typedVisitor = visitor as IIncompleteLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncompleteChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncompleteChunkContext incompleteChunk() {
		IncompleteChunkContext _localctx = new IncompleteChunkContext(Context, State);
		EnterRule(_localctx, 4, RULE_incompleteChunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; incompleteBlock();
			State = 138; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIncompleteLuaVisitor<TResult> typedVisitor = visitor as IIncompleteLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__26) | (1L << NAME))) != 0)) {
				{
				{
				State = 140; stat();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18) {
				{
				State = 146; retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncompleteBlockContext : ParserRuleContext {
		public IncompleteStatContext incompleteStat() {
			return GetRuleContext<IncompleteStatContext>(0);
		}
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public IncompleteRetstatContext incompleteRetstat() {
			return GetRuleContext<IncompleteRetstatContext>(0);
		}
		public IncompleteBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_incompleteBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.EnterIncompleteBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.ExitIncompleteBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIncompleteLuaVisitor<TResult> typedVisitor = visitor as IIncompleteLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncompleteBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncompleteBlockContext incompleteBlock() {
		IncompleteBlockContext _localctx = new IncompleteBlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_incompleteBlock);
		int _la;
		try {
			int _alt;
			State = 163;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 152;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						State = 149; stat();
						}
						} 
					}
					State = 154;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				}
				State = 155; incompleteStat();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 159;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__26) | (1L << NAME))) != 0)) {
					{
					{
					State = 156; stat();
					}
					}
					State = 161;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 162; incompleteRetstat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public VarlistContext varlist() {
			return GetRuleContext<VarlistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode NAME() { return GetToken(IncompleteLuaParser.NAME, 0); }
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ExpContext[] exp() {
			return GetRuleContexts<ExpContext>();
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public NamelistContext namelist() {
			return GetRuleContext<NamelistContext>(0);
		}
		public FuncnameContext funcname() {
			return GetRuleContext<FuncnameContext>(0);
		}
		public FuncbodyContext funcbody() {
			return GetRuleContext<FuncbodyContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIncompleteLuaListener typedListener = listener as IIncompleteLuaListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIncompleteLuaVisitor<TResult> typedVisitor = visitor as IIncompleteLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}
